namespace.template.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ${CI_PROJECT_PATH_SLUG}
  annotations:
    field.cattle.io/projectId: c-98hg4:p-rjqzv
