deploy.template.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${CI_PROJECT_PATH_SLUG}-${CI_BUILD_REF_NAME}
  namespace: ${CI_PROJECT_PATH_SLUG}
  labels:
    app: ${CI_PROJECT_PATH_SLUG}-${CI_BUILD_REF_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${CI_PROJECT_PATH_SLUG}-${CI_BUILD_REF_NAME}
  template:
    metadata:
      labels:
        app: ${CI_PROJECT_PATH_SLUG}-${CI_BUILD_REF_NAME}
    spec:
      containers:
      - name: ${CI_PROJECT_PATH_SLUG}
        image: ${CI_REGISTRY_IMAGE}:${IMAGE}
      imagePullSecrets:
      - name: registry-auth
---
apiVersion: v1
kind: Service
metadata:
  labels:
  name: ${CI_PROJECT_PATH_SLUG}-${CI_BUILD_REF_NAME}
  namespace: ${CI_PROJECT_PATH_SLUG}
spec:
  clusterIP: None
  ports:
  - name: default
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: ${CI_PROJECT_PATH_SLUG}-${CI_BUILD_REF_NAME}
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${CI_PROJECT_PATH_SLUG}-${CI_BUILD_REF_NAME}
  namespace: ${CI_PROJECT_PATH_SLUG}
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required :)'
spec:
  rules:
  - host: ${FQDN}
    http:
      paths:
      - backend:
          serviceName: ${CI_PROJECT_PATH_SLUG}-${CI_BUILD_REF_NAME}
          servicePort: 5000
  tls:
  - hosts:
    - ${FQDN}
    secretName: ${TLS_SECRET_NAME}
